# MaiBot_wenfork

./: .gitignore  DOCUMENTATION_ORGANIZATION.md  NapCat配置文件说明.md  README.md  bot_junjun.py  bot_yiyi.py  check_architecture_status.py  check_v2_status.py  migrate_database.py  napcat_yiyi.json  requirements.txt  test_intimacy_features.py  test_intimacy_natural_reply.py  test_jk_api.py  test_meinv_api.py  伊伊启动快速参考.md  修复总结.md  双机器人启动指南.md  手动启动指南.md
.claude/: settings.local.json
MaiBot/: .gitattributes  (+7 more)
MaiBot-JunJun/MaiBot/MaiBot/: pyproject.toml
MaiBot-JunJun/MaiBot/MaiBot/docs/: PLUGINS_USAGE_GUIDE.md
MaiBot-JunJun/MaiBot/MaiBot/docs/archive/2026-02-03/: 2026-02-03_完成报告_v2.md
MaiBot-JunJun/MaiBot/MaiBot/docs/reports/: 2026-02-03_MaiBot项目优化最终报告.md
MaiBot-JunJun/MaiBot/MaiBot/plugins/ChatFrequency/: plugin.py
MaiBot-JunJun/MaiBot/MaiBot/plugins/hello_world_plugin/: _manifest.json
MaiBot-JunJun/MaiBot/MaiBot/src/: main.py
MaiBot-JunJun/MaiBot/MaiBot/src/chat/brain_chat/: brain_planner.py
MaiBot-JunJun/MaiBot/MaiBot/src/chat/planner_actions/: action_modifier.py  planner.py
MaiBot-JunJun/MaiBot/MaiBot/src/chat/utils/: memory_forget_task.py
MaiBot-JunJun/MaiBot/MaiBot/src/common/logger_system/: REFACTORING_STATUS.md
MaiBot-JunJun/MaiBot/MaiBot/src/common/logger_system/handlers/: __init__.py
MaiBot-JunJun/MaiBot/MaiBot/src/config/: config.py
MaiBot-JunJun/MaiBot/MaiBot/src/jargon/: jargon_explainer.py
MaiBot-JunJun/MaiBot/MaiBot/src/llm_models/exceptions/: __init__.py  network_exceptions.py
MaiBot-JunJun/MaiBot/MaiBot/src/memory_system/: memory_retrieval.py
MaiBot-JunJun/MaiBot/MaiBot/src/webui/: jargon_routes.py  person_routes.py
MaiBot-JunJun/MaiBot/MaiBot/src/webui/plugin_system/: REFACTORING_STATUS.md
MaiBot-JunJun/MaiBot/MaiBot/tests/fixtures/: __init__.py
(+747 files in other folders)
