[project]
name = "MaiBot"
version = "0.11.0"
description = "MaiCore 是一个基于大语言模型的可交互智能体"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "aiohttp-cors>=0.8.1",
    "colorama>=0.4.6",
    "faiss-cpu>=1.8.0",
    "fastapi>=0.100.0",
    "google-genai>=1.0.0",
    "jieba>=0.42.1",
    "json-repair>=0.30.0",
    "maim-message",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "peewee>=3.16.0",
    "pillow>=10.0.0",
    "pyarrow>=12.0.0",
    "pydantic>=2.0.0",
    "pypinyin>=0.50.0",
    "python-dotenv>=1.0.0",
    "quick-algo>=0.1.0",
    "rich>=13.0.0",
    "ruff>=0.1.0",
    "setuptools>=65.0.0",
    "structlog>=23.0.0",
    "toml>=0.10.2",
    "tomlkit>=0.12.0",
    "urllib3>=2.0.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "faker>=19.0.0",
    "pytest-mock>=3.12.0",
]

dev = [
    "ruff>=0.12.2",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.ruff]

include = ["*.py"]

# 行长度设置
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

# 如果一个变量的名称以下划线开头，即使它未被使用，也不应该被视为错误或警告。
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# 启用的规则
select = [
    "E", # pycodestyle 错误
    "F", # pyflakes
    "B", # flake8-bugbear
]

ignore = ["E711","E501"]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"


# 使用双引号表示字符串
quote-style = "double"

# 尊重魔法尾随逗号
# 例如：
# items = [
#     "apple",
#     "banana",
#     "cherry",
# ]
skip-magic-trailing-comma = false

# 自动检测合适的换行符
line-ending = "auto"
